--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Welcome to My Static Website For Task 6</h1>
     <p>This website is deployed using GitHub Pages.</p>
-    <p><strong>Version:</strong> 1.0</p>
+    <p><strong>Version:</strong> 2.0 - Content Updated</p>
+
 </body>
 </html>
